--- a/demo/index.html
+++ b/demo/index.html
@@ -305,6 +305,8 @@
                 wrapperClass: "form-group",
                 wrapperHiddenClass: "d-none",
                 wrapperVisibleClass: "d-block",
+
+                messageWrapperNode: undefined,
                 
                 // "Unvalidated" field state
                 showUnvalidatedMessage: true,
